# semantic-text-classification

./: # PRD — Web Demo: Semantic Conversation .md  .gitignore  CHANGELOG.md  CLAUDE.md  Posicionamento científico.md  Protocolo experimental.md  README.md  pyproject.toml
deep_research/: repos.txt
demo/: pyproject.toml
demo/backend/: __init__.py  app.py  config.py  dependencies.py
demo/backend/routers/: analytics.py  categories.py  conversations.py  filters.py  search.py
demo/backend/schemas/: api_models.py
demo/backend/services/: category_service.py  conversation_store.py  search_service.py  text_highlighting.py
demo/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
demo/frontend/src/: App.tsx  index.css  main.tsx
demo/frontend/src/components/: AnalyticsPanel.tsx  CategoriesPanel.tsx  ConversationView.tsx  DSLGuidePanel.tsx  EvidenceBadge.tsx  FilterBar.tsx  HighlightedText.tsx  ModeTab.tsx  QueryEvaluationPanel.tsx  ResultCard.tsx  SearchBar.tsx  SearchBuilderPanel.tsx  SearchLoading.tsx
demo/frontend/src/lib/: api.ts  condition-config.ts  dsl-generator.ts  evidence.ts
demo/frontend/src/types/: api.ts  dsl.ts
demo/scripts/: build_index.py  ingest_br_dataset.py  ingest_dataset.py  perf_test.py
docs/: KB.md  KB_Complementar.md  PRD-web-demo.md  PRD.md  ROADMAP_SOTA.md  dataset-audit-protocol.md
docs/adr/: ADR-001-package-layout-and-public-api.md  ADR-002-frozen-strict-models.md  ADR-003-embedding-vector-as-list-float.md  ADR-004-context-window-structural-fields.md
docs/dissertacao/: analise-comparativa.md  desenho-experimental.md  research-log.md  steps-log.md
docs/pesquisas/: semantic-text-classification.md
examples/: benchmark_pipeline.py  run_pipeline.py
experiments/data/: abstention_calibration.jsonl  consolidated_clean.jsonl  expanded.jsonl  split_manifest.json  test.jsonl  train.jsonl  val.jsonl  (+1 more)
mit/: chapter1_introduction.md  chapter2_background.md  chapter3_related_work.md  chapter4_architecture.md  chapter5_methodology.md  chapter6_results.md  chapter7_conclusion.md
tests/: conftest.py
(+354 files in other folders)
