[project]
name = "talkex-demo"
version = "0.1.0"
description = "TalkEx web demo — conversation intelligence search engine"
requires-python = ">=3.11"
dependencies = [
    "talkex-engine",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "qdrant-client>=1.7,<2.0",
    "datasets>=2.16,<4.0",
    "huggingface-hub>=0.20,<1.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2,<4.0",
]
